[gd_scene load_steps=7 format=2]

[ext_resource path="res://Environment.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/GameController.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UIGameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://DropSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=6]

[node name="GameController" type="Node2D"]
script = ExtResource( 2 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 575 )

[node name="Player" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1.5, 1.5 )

[node name="DropSpawner" parent="." instance=ExtResource( 5 )]

[node name="Environment" parent="." instance=ExtResource( 1 )]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="RecoveringProgressBar" type="ProgressBar" parent="HUD"]
margin_left = 231.0
margin_top = 656.0
margin_right = 384.0
margin_bottom = 670.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecoveringTextLabel" type="Label" parent="HUD/RecoveringProgressBar"]
margin_left = -86.2751
margin_top = -0.917114
margin_right = -16.2751
margin_bottom = 13.0829
text = "Recovering"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 86.9587
margin_top = 684.934
margin_right = 126.959
margin_bottom = 698.934
text = "0"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CollectedLabel" type="Label" parent="HUD/ScoreLabel"]
margin_left = -74.1707
margin_top = -0.152832
margin_right = -14.1707
margin_bottom = 13.8472
text = "Collected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedLabel" type="Label" parent="HUD"]
margin_left = 86.5885
margin_top = 655.574
margin_right = 126.589
margin_bottom = 669.574
text = "0"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MissedTextLabel" type="Label" parent="HUD/MissedLabel"]
margin_left = -61.251
margin_top = -0.750916
margin_right = -15.251
margin_bottom = 13.2491
text = "Missed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneratorLabel" type="Label" parent="HUD"]
margin_left = 230.82
margin_top = 681.898
margin_right = 319.82
margin_bottom = 695.898
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="GeneratorTextLabel" type="Label" parent="HUD/GeneratorLabel"]
margin_left = -83.9162
margin_top = 0.899658
margin_right = -19.9162
margin_bottom = 14.8997
text = "Generator"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIGameOver" parent="." instance=ExtResource( 4 )]
[connection signal="drop_caught" from="Player" to="." method="_on_Player_drop_caught"]
[connection signal="node_collided" from="Environment" to="." method="_on_Drop_collided"]
[connection signal="start_game" from="UIGameOver" to="." method="new_game"]
